# myllm

./: CMakeLists.txt  des.md
.claude/: settings.local.json
cmake/: myllmConfig.cmake.in
examples/: chat_demo.c
include/: myllm.h  tensor.h
include/inference/: engine.h  inference.h
include/kv/: kv.h
include/loader/: loader.h  safetensors.h
include/models/: model_types.h
include/models/llama/: attention.h  block.h  config.h  llama.h  model.h
include/models/qwen2/: config.h  model.h  qwen2.h
include/models/qwen3/: config.h  model.h  qwen3.h
include/nn/: embedding.h  linear.h  mlp.h  nn.h  rmsnorm.h
include/ops/: activation.h  elementwise.h  matmul.h  normalization.h  ops.h  rope.h
include/quant/: config.h  fp8.h  quant.h
include/sampler/: sampler.h
include/tensor/: dtype.h  shape.h  tensor.h
include/tokenizer/: tokenizer.h
include/utils/: error.h  log.h  memory.h  timer.h  utils.h
src/inference/: engine.c
src/kv/: kv.c
src/loader/: loader.c  safetensors.c
src/models/llama/: attention.c  block.c  config.c  model.c
src/models/qwen2/: config.c  model.c
src/models/qwen3/: config.c  model.c
src/nn/: embedding.c  linear.c  mlp.c  rmsnorm.c
src/ops/: activation.c  elementwise.c  matmul.c  normalization.c  rope.c
src/quant/: config.c  fp8.c  quant.c
src/sampler/: sampler.c
src/tensor/: shape.c  tensor.c
src/tokenizer/: tokenizer.c
src/utils/: error.c  log.c  memory.c  timer.c  utils.c
tests/common/: test_common.h
tests/unit/inference/: test_inference.c
tests/unit/kv/: test_kv.c
tests/unit/loader/: test_loader.c
tests/unit/models/: test_llama.c  test_qwen2.c  test_qwen3.c
tests/unit/nn/: test_nn.c
tests/unit/ops/: test_ops.c
tests/unit/quant/: test_quant.c
tests/unit/sampler/: test_sampler.c
tests/unit/tensor/: test_tensor.c
tests/unit/tokenizer/: test_tokenizer.c
tests/unit/utils/: test_utils.c
